--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,3 +2,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html,
+  body {
+    background-color: #000;
+    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    @apply text-white antialiased;
+  }
+}
